# MiniLangTranslator

./: .gitignore  CMakeLists.txt  PROIECT.md  README.md  program.txt
include/: AST.h  Lexer.h  Translator.h
src/: AST.cpp  Lexer.cpp  main.cpp
